Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignTextBoolObj.quorum
class main
    action Main
        Boolean b
        text txt
        b:SetValue(true)
        txt = cast(text, b)
    end
end